fixing applisting page css alignment issue

--- a/modules/jaggery-apps/appmgt/src/site/themes/default/css/styles.css
+++ b/modules/jaggery-apps/appmgt/src/site/themes/default/css/styles.css
@@ -634,8 +634,8 @@ a.btn-action {
 .app-listing {
     position: relative;
     top: 11em;
-    padding: 18px;
-    min-height: 273px;
+    /*padding: 18px;
+    min-height: 273px;*/
 }
 #search-apps {
     border-radius: 0px;
